Update 스프링이 시작과 전개.md

--- a/스프링이 시작과 전개.md
+++ b/스프링이 시작과 전개.md
@@ -4,6 +4,6 @@ Spring은 2000년대 초 웹,어플리케이션의 수요가 폭팔적으로 증
 그렇게 Spring프레임워크의 또 다른 장점은, 기존의 웹어플리케이션 개발자가 이직 및 퇴사하여도 정해진 구조안에 Spring 사용이 정해져있기에 다른 개발자가와도 유지보수가 쉬웠습니다.
 그러던 중 2014년 Spring이 무겁다는 단점을 보완하기 위해 Spring Boot를 출시하였습니다.
 
-> 그렇다면 최근에는 Spring boot를 사용하는데 왜 오래된 Spring을 배워야하나요의 질문이 생길 수 있습니다. 그 이유는 서블릿 > JSP > Spring > Spring boot  이렇게 발전되는 순서중 
-> 서블릿과 jSP 그리고 스프링까지 배운다면 원리에 대해 완벽하게 파악할 수 있고 Spring과 Springboot의 사용법은 같다! 
+> 그렇다면 최근에는 Spring boot를 사용하는데 왜 오래된 Spring을 배워야하나요의 질문이 생길 수 있습니다. 
+> 그 이유는 서블릿 > JSP > Spring > Spring boot  이렇게 발전되는 순서중 서블릿과 jSP 그리고 스프링까지 배운다면 원리에 대해 완벽하게 파악할 수 있고 Spring과 Springboot의 사용법은 같다! 
 
