Update 스프링이 시작과 전개.md

--- a/스프링이 시작과 전개.md
+++ b/스프링이 시작과 전개.md
@@ -16,7 +16,7 @@ Spring은 2000년대 초 웹,어플리케이션의 수요가 폭팔적으로 증
 즉, 애너테이션이나 main() 메서드 내의 메서드들의 애플리케이션 흐름에 주도권이 개발자가 아닌 Framework에 있는것은 framework입니다. 
 짧은 내용이긴하지만 Framework과 Library의 차이점을 학습하면서 Spring Framework의 핵심 개념인 IoC(Inversion Of Control, 제어의 역전)라는 중요한 개념을 알게된 것입니다.
 
-## Spring의 발전 및 전개
+## Spring의전개
 
 Spring Framework이 도입되기 전에는 JSP나 Servlet 기술을 사용한 Model1, Model2 아키텍쳐를 기반으로 한 Java 웹 애플리케이션을 제작하였습니다.
 Spring MVC 방식이 도입됨으로써 Java 웹 애플리케이션의 제작 방식이 획기적으로 변하게 되었습니다.
