Update 스프링의 시작과 전개.md

--- a/스프링의 시작과 전개.md
+++ b/스프링의 시작과 전개.md
@@ -14,7 +14,7 @@ Spring은 2000년대 초 웹,어플리케이션의 수요가 폭팔적으로 증
  애플리케이션 코드는 애플리케이션을 개발하는 사람 즉, 개발자가 작성을 할 것입니다. 이렇게 개발자가 짜 놓은 코드내에서 필요한 기능이 있으면 해당 라이브러리를 호출해서 사용하는 것이 바로 Library입니다. 즉, 애플리케이션 흐름의 주도권이 개발자에게 있는 것입니다.
 
 즉, 애너테이션이나 main() 메서드 내의 메서드들의 애플리케이션 흐름에 주도권이 개발자가 아닌 Framework에 있는것은 framework입니다. 
-짧은 내용이긴하지만 Framework과 Library의 차이점을 학습하면서 Spring Framework의 핵심 개념인 IoC(Inversion Of Control, 제어의 역전)라는 중요한 개념을 알게된 것입니다.
+짧은 내용이긴하지만 Framework Library의 차이점을 학습하면서 Spring Framework의 핵심 개념인 IoC(Inversion Of Control, 제어의 역전)라는 중요한 개념을 알게된 것입니다.
 
 ## Spring의전개
 
