--- a/브라우저.md
+++ b/브라우저.md
@@ -1,3 +1,17 @@
   # 브라우저의 작동원리
   
-  
+  > 3아키텍처의 구성요소 
+  - 클라이언트 : 리소스 사용
+  - 서버 : 리소스 전달
+  - 데이터베이스 : 리소스 저장
+
+클라이언트와 서버는 '요청과 응답으로 구성'
+서버가 일방적으로 클라이언트에 전달하는 작은데이터 : 쿠키
+
+클라이언트와 서버간의 통신을 알아보려면 '프로토콜'개념부터 이해해야합니다.
+
+## 프로토콜: 약속
+
+> 웹 , 애플리케이션 아키텍처에서는 클라이언트와 서버는 'HTTP 프로토콜'을 이용해 서로 대화합니다.
+
+
