--- a/브라우저.md
+++ b/브라우저.md
@@ -13,5 +13,7 @@
 ## 프로토콜: 약속
 
 > 웹 , 애플리케이션 아키텍처에서는 클라이언트와 서버는 'HTTP 프로토콜'을 이용해 서로 대화합니다.
+HTTP를 이용해 주고받는 메세지를 HTTP메세지라 칭합니다.
 
+실제사례를 통해 이해력 높이기 : 커피전문점 투썸플레이스 주문방법은 앱이용, 직접주문,키오스크 활용 등 다양한 주문방법이 있는데 이러한 방법들을 프로토콜이라 합니다.
 
