--- a/브라우저.md
+++ b/브라우저.md
@@ -17,3 +17,7 @@ HTTP를 이용해 주고받는 메세지를 HTTP메세지라 칭합니다.
 
 실제사례를 통해 이해력 높이기 : 커피전문점 투썸플레이스 주문방법은 앱이용, 직접주문,키오스크 활용 등 다양한 주문방법이 있는데 이러한 방법들을 프로토콜이라 합니다.
 
+같은일을 하기위해 다양한 방법들이 존재 ( HTTP 웹 프로토콜, 메일 프로토콜) 등 주문하기 위해서 규칙이 존재하듯 프로콜은 각자의 프로토콜마다
+지켜야 할 규칙들이 존재합니다.
+
+
