--- a/브라우저.md
+++ b/브라우저.md
@@ -20,4 +20,12 @@ HTTP를 이용해 주고받는 메세지를 HTTP메세지라 칭합니다.
 같은일을 하기위해 다양한 방법들이 존재 ( HTTP 웹 프로토콜, 메일 프로토콜) 등 주문하기 위해서 규칙이 존재하듯 프로콜은 각자의 프로토콜마다
 지켜야 할 규칙들이 존재합니다.
 
+### HTTP를 이용한 API
+
+컴퓨터는 음식 주문하듯 맛있게 해주세요 같은 간접적인 표현방식으로는 이해할 수 없습니다. 왜냐하면 컴퓨터는 0과 1로 변환할 수 있는 정확한 요청이 필요합니다.
+
+그러면 클라이언트는 서버에 사용가능한 자원이 무엇이 있는지 어떻게 알까요 ?
+- 그 답은 API(Application Programming interface)입니다. <Interface의 뜻은 의사소통 가능>
+- 서버는 클라이언트에게 리소스를 잘 활용할 수 있도록 API를 제공해합니다.
+
 
