--- a/브라우저.md
+++ b/브라우저.md
@@ -28,4 +28,11 @@ HTTP를 이용해 주고받는 메세지를 HTTP메세지라 칭합니다.
 - 그 답은 API(Application Programming interface)입니다. <Interface의 뜻은 의사소통 가능>
 - 서버는 클라이언트에게 리소스를 잘 활용할 수 있도록 API를 제공해합니다.
 
+실제사례를 통한 이해력을 높여보겠습니다 !
+API는 커피전문점의 메뉴판과 같습니다. 
+- 클라이언트가 투썸플레이스가 제공하는 자원의 종류(아메리카노,콜드브루..등)을 모른다고 가정할 경우 어떠한 이상한 메뉴(돈까스)를
+시키지 않도록 도와주어야 합니다.
+- 메뉴판을 설계해 놨기에 클라이언트가 적절한 요청이 가능케 합니다.
+- 마찬가지로 서버가 리소스를 전달하기 위한 메뉴판 , 즉 API를 구축해놓아야 클라이언트가 이를 잘 활용할 수 있습니다.
+- 보통 인터넷에 있는 데이터를 요청할떄는 'HTTP 프로토콜'을 사용하며 주소(URL,URI)를 통해 접근합니다. 
 
