--- a/브라우저.md
+++ b/브라우저.md
@@ -36,3 +36,5 @@ API는 커피전문점의 메뉴판과 같습니다.
 - 마찬가지로 서버가 리소스를 전달하기 위한 메뉴판 , 즉 API를 구축해놓아야 클라이언트가 이를 잘 활용할 수 있습니다.
 - 보통 인터넷에 있는 데이터를 요청할떄는 'HTTP 프로토콜'을 사용하며 주소(URL,URI)를 통해 접근합니다. 
 
+-----
+HTTP 요청에는 '메소드'라는 개념이 있습니다.
