--- a/브라우저.md
+++ b/브라우저.md
@@ -38,3 +38,8 @@ API는 커피전문점의 메뉴판과 같습니다.
 
 -----
 HTTP 요청에는 '메소드'라는 개념이 있습니다.
+앞 투썸플레이스에서는 리소스를 그저 달라고(GET) 요청했지만, 사용자 관리 API에서는 사용자를 추가해달라고 (CREATE)하거나, 지워달라고 (DELETE)요청할 수 도 있습니다.
+마치 CRUD행동과 비슷합니다. CRUD는 각각의 행동과 일치하는 `HTTP 메소드의`종류가 존재합니다.
+HTTP메소드는 리소스를 이용해 하려는 행동에 맞게 적절하게 사용해야합니다.
+
+# 브라우저 작동원리 (눈에 보이지 않는 공간)
