Update 스프링의 시작과 전개.md

--- a/스프링의 시작과 전개.md
+++ b/스프링의 시작과 전개.md
@@ -21,3 +21,14 @@ Spring은 2000년대 초 웹,어플리케이션의 수요가 폭팔적으로 증
 Spring Framework이 도입되기 전에는 JSP나 Servlet 기술을 사용한 Model1, Model2 아키텍쳐를 기반으로 한 Java 웹 애플리케이션을 제작하였습니다.
 Spring MVC 방식이 도입됨으로써 Java 웹 애플리케이션의 제작 방식이 획기적으로 변하게 되었습니다.
 Spring MVC 설정의 복잡함과 어려움을 극복하기 위해 Spring Boot이 탄생하게 되었습니다.
+
+## 스프링의 구조
+
+![스프링 구조](https://user-images.githubusercontent.com/99226598/181009374-1e800c52-19e6-4726-b309-0038fb500a13.png)
+
+Core: 제어 역전(IoC)과 의존성 주입(DI) 기능을 제공합니다. 제어 역전은 전체적인 프로세스의 흐름이 개발자가 아니라 프레임워크(여기서는 Spring)에 의해 결정된다는 뜻입니다. 개발자는 프레임워크가 정한 틀에 따라 적절한 코드를 작성해 넣으면 됩니다.  
+DAO: JDBC 추상 계층을 제공하고 JDBC는 자바의 데이터베이스 커넥터이고 데이터가 담겨있는 VO(Value Object) 클래스를 이용해 사용합니다.
+ORM: JPA, Hibernate와 같은 ORM이나 MyBatis 같은 데이터베이스 API 등과 통합할 수 있는 기능을 제공합니다.
+AOP: 스프링 프레임워크에서 제공하는 AOP 패키지를 제공합니다. 
+Web: Spring Web MVC, Struts, WebWork 등 웹 어플리케이션 구현에 도움되는 기능을 제공합니다.
+JEE: EJB, JMX 등의 엔터프라이즈 J2EE 스펙에 관한 기능을 제공합니다.
