Update 스프링의 시작과 전개.md

--- a/스프링의 시작과 전개.md
+++ b/스프링의 시작과 전개.md
@@ -22,7 +22,7 @@ Spring Framework이 도입되기 전에는 JSP나 Servlet 기술을 사용한 Mo
 Spring MVC 방식이 도입됨으로써 Java 웹 애플리케이션의 제작 방식이 획기적으로 변하게 되었습니다.
 Spring MVC 설정의 복잡함과 어려움을 극복하기 위해 Spring Boot이 탄생하게 되었습니다.
 
-## 스프링의 구조
+## Spring의 구조
 
 ![스프링 구조](https://user-images.githubusercontent.com/99226598/181009374-1e800c52-19e6-4726-b309-0038fb500a13.png)
 
