--- a/SpringBoot/01.springboot_section_api.md
+++ b/SpringBoot/01.springboot_section_api.md
@@ -1,3 +1,4 @@
+![image](https://user-images.githubusercontent.com/99226598/181456290-b0e9c747-2f2b-4bc2-a222-1bc2a39da09f.png)
 
 # Controller
 스프링MVC의 개념 
