--- a/SpringBoot/springboot+jpa_webapplication/01. design.md
+++ b/SpringBoot/springboot+jpa_webapplication/01. design.md
@@ -1,1 +1,30 @@
 
+기능 목록
+
+ 회원 기능
+- 회원 등록
+- 회원 조회
+
+상품 기능
+- 상품 등록
+- 상품 수정
+- 상품 조회
+
+주문 기능
+- 상품 주문
+- 주문 내역 조회
+- 주문 취소
+
+기타 요구사항
+
+- 상품은 재고 관리가 필요(주문시 줄어들고 늘어남)
+- 상품의 종류는 도서, 음반, 영화가 있음
+- 상품을 카테고리로 구분가능
+- 상품 주문시 배송 정보를 입력
+
+#### 엔티티 설계 
+![엔티티](https://user-images.githubusercontent.com/99226598/181472314-7ca7bb2b-9915-4803-bed0-e2ded812303d.PNG)
+
+
+#### Jpa이용한 테이블 설계
+![캡처](https://user-images.githubusercontent.com/99226598/181472538-ccf8183b-e436-4517-9cf4-09d2e6b6dfe8.PNG)
