--- a/SpringBoot/springboot+jpa_webapplication/03.orderitem_item_entity.md
+++ b/SpringBoot/springboot+jpa_webapplication/03.orderitem_item_entity.md
@@ -47,7 +47,7 @@ public abstract class Item {
     @ManyToMany(mappedBy = "items")
     private List<Category> categories = new ArrayList<>();
 }
-
+----------- 추상클래스인 item에 상속받는 클래스들 
 // 연관관계로 받을떄는 extend해서 추상클래스와 연동한다.
 @Entity
 @Getter @Setter
