--- a/SpringBoot/springboot+jpa_webapplication/03.orderitem_item_entity.md
+++ b/SpringBoot/springboot+jpa_webapplication/03.orderitem_item_entity.md
@@ -26,8 +26,10 @@ public class OrderItem {
 //추상클래스로 만듦, why? 구현체로 할것이기떄문에 여러 클래스를 연동시킬것! 
 //Item은 상속관계매핑으로 진행,
 //싱글테이블 전략을 사용, @Inheritence사용 ,즉 Item 테이블에 앨범,북,무비의 데이터를 전부 다 담을것임
+```
 
 ![한테이블에 떄려박기](https://user-images.githubusercontent.com/99226598/181476480-62b2ad42-de2c-4775-8a39-abe8e0c98560.PNG)
+```java
 //@Inheritance로 상속받는 클래스들을 하나의 테이블로 모아두면 DB에 이렇게 저장된다.
 
 @Entity
