Update and rename order,orderitem_entitiy_add.md to 06. order,orderitem_entitiy_add.md

--- a/SpringBoot/springboot+jpa_webapplication/06. order,orderitem_entitiy_add.md
+++ b/SpringBoot/springboot+jpa_webapplication/06. order,orderitem_entitiy_add.md
@@ -43,7 +43,33 @@
         }
         return totalPrice;
     }
-    
-    ```
-    
-    ### orderitem
+
+
+     OrderITEM 주문한 상품들 
+
+      private int orderPrice; //주문당시 가격
+    private int count; //주문당시 수량
+
+    //order item 생성메서드
+    //OrderItem을 생성하면 재고를 기본적으로 까줘야한다 .
+    public static OrderItem createOrderItem(Item item,int orderPrice,int count){
+        OrderItem orderItem = new OrderItem();
+        orderItem.setItem(item);
+        orderItem.setOrderPrice(orderPrice);
+        orderItem.setCount(count);
+    item.removeStock(count);
+    return orderItem;
+    }
+
+
+    //비즈니스 로직
+    //캔슬의 의미는 재고수량을 원래대로 되돌려준다 ex.97개갖고있었으면 기존주문수량3개를 취소하고싶으면 기존수량을 다시 더해준다.
+    public void cancel() {
+            //아이템을 재고수량에 더해준다.
+       getItem().addStock(count);
+    }
+
+    public int getTotalPrice() {
+        return getOrderPrice() * getCount();
+    }
+}
