--- a/SpringBoot/springboot+jpa_webapplication/06. order,orderitem_entitiy_add.md
+++ b/SpringBoot/springboot+jpa_webapplication/06. order,orderitem_entitiy_add.md
@@ -73,3 +73,24 @@
         return getOrderPrice() * getCount();
     }
 }
+
+```
+
+### Item entitiy
+
+  //두가지 기능을 추가
+    //Entitiy에 서비스기능 추가하는 이유는 여기에 데이터가 담기기에 여기서 바로 로직돌리는게 응집력이 가장 높음
+
+    //재고수량을 증가하는 로직
+    public void addStock(int quantity){
+      this.stockQuantity += quantity;
+    }
+    //재고수량 감소하는 로직
+    public void removeStock(int quantity){
+        //0보다 줄어들면안되니 체크하는 로직까지 필요
+   int restStock = this.stockQuantity - quantity;
+    if(restStock < 0) {
+        throw new NotEnoughStockException("need more stock");  //NotEnoughException을 따로 만들어줘야함
+             }
+        this.stockQuantity = quantity;
+        }
