--- a/SpringBoot/springboot+jpa_webapplication/07. member_item_service.md
+++ b/SpringBoot/springboot+jpa_webapplication/07. member_item_service.md
@@ -46,3 +46,24 @@ public class MemberService {
     }
 }
 ```
+### Item Service
+
+@Service
+@Transactional(readOnly = true)
+@RequiredArgsConstructor
+public class ItemService {
+
+    private final ItemRepository itemRepository;
+
+    @Transactional    // 클래스가 리드온니로 설정했놨기에 저장하는 메서드는 트랜잭셔널로 해준다
+    public void save(Item item){
+        itemRepository.save(item);
+    }
+
+    public List<Item>findItems(){
+      return itemRepository.findAll();
+    }
+    public Item findOne(Long itemId) {
+        return itemRepository.findOne(itemId);
+    }
+}
