--- a/Jpa/02. jpa_inner_structure.md
+++ b/Jpa/02. jpa_inner_structure.md
@@ -8,14 +8,35 @@
 -  엔티티 매니저를 통해서 영속성 컨텍스트에 접근
 
 > EntityManager가 생성되면 눈에보이지 않지만 영속성 콘텍스트가 '자동 생성'된다.
-- EntityManager는 내 객체를 대신 저장해주는 심부름꾼이다. 
+- EntityManager는 내 '객체를 대신 저장,전달,삭제 해주는 심부름꾼'이다.
+
+transaction은 database에 커넥션 ( 연결)을 돕고 행하는거라 생각하면 쉽다.
+
+```java
+//트랜잭션 얻는 방법
+EntityTransaction tx = em.gettransaction();
+
+그 후 tx.begin(); // 트랜잭션 (연결) 시작!
+
+...
+
+em.close();   //이 두개를 해줘야하는데 이유는 쓰레드간의 공유를 불가하기 위해서이다.
+emf.close(); 
+```
+
+
+
 
 영속상태가 된다는 뜻은 em.persist(...)를하면 영속성컨테스트가 관리하는 관리 대상의 상태가 된다는 말과 동일함
 즉, 객체를 저장한 상태를 말한다 .
 
 ![캡처](https://user-images.githubusercontent.com/99226598/182979873-452f02ea-ab3c-4419-b8ff-0f258059e808.PNG)
 
-영속성컨텍스트에 있는 객체들은 '트랜잭션 commit' 하는 순간 DB에 저장이 된다/
+#### 영속성컨텍스트에 있는 객체들은 '트랜잭션 commit' 하는 순간 DB에 저장이 된다/
+
+
 ![KakaoTalk_20220805_100802461](https://user-images.githubusercontent.com/99226598/182980413-b01c5f5f-427f-4e6d-b81a-95da7e97abd5.jpg)
+
+
 
 
