--- a/Jpa/03. jpa_inner_structure.md
+++ b/Jpa/03. jpa_inner_structure.md
@@ -1,8 +1,11 @@
  
-#### 영속성컨텍스트 내부에 저장되는 모습과 조회할떄의 모습
+### 영속성컨텍스트 내부에 저장되는 모습과 조회할떄의 모습
 
 
 ![`2121](https://user-images.githubusercontent.com/99226598/182980014-3c31edc9-0001-430c-af70-d265bff9b295.PNG)
 <출처 : 인프런 자바 ORM 표준 JPA프로그래밍>
 
-영속성 엔티는 동일성을 보장하는데 이 동일성이 보장되는 이유는 객체들이 1차캐시에 전부 모여있기 떄문이다.
+
+- 영속성 엔티는 동일성을 보장하는데 이 동일성이 보장되는 이유는 객체들이 1차캐시에 전부 모여있기 떄문이다.
+
+
