--- a/Jpa/02. jpa_inner_structure.md
+++ b/Jpa/02. jpa_inner_structure.md
@@ -37,6 +37,10 @@ emf.close();
 
 ![KakaoTalk_20220805_100802461](https://user-images.githubusercontent.com/99226598/182980413-b01c5f5f-427f-4e6d-b81a-95da7e97abd5.jpg)
 
-
-
-
+```java 
+em.persist(memberA);
+em.persist(memberB);
+//여기까지 INSERT SQL을 데이터베이스에 보내지 않는다.
+//커밋하는 순간 데이터베이스에 INSERT SQL을 보낸다.
+transaction.commit(); // 
+```java
