--- a/Jpa/02. jpa_inner_structure.md
+++ b/Jpa/02. jpa_inner_structure.md
@@ -41,6 +41,7 @@ emf.close();
 em.persist(memberA);
 em.persist(memberB);
 //여기까지 INSERT SQL을 데이터베이스에 보내지 않는다.
-//커밋하는 순간 데이터베이스에 INSERT SQL을 보낸다.
-transaction.commit(); // 
+
+transaction.commit(); // //커밋하는 순간 데이터베이스에 INSERT SQL을 보낸다.
+
 ```java
