--- a/Jpa/02. jpa_inner_structure.md
+++ b/Jpa/02. jpa_inner_structure.md
@@ -42,6 +42,6 @@ em.persist(memberA);
 em.persist(memberB);
 //여기까지 INSERT SQL을 데이터베이스에 보내지 않는다.
 
-transaction.commit(); // //커밋하는 순간 데이터베이스에 INSERT SQL을 보낸다.
+transaction.commit(); //커밋하는 순간 데이터베이스에 INSERT SQL을 보낸다.
 
 ```java
