--- a/Jpa/03. jpa_inner_structure.md
+++ b/Jpa/03. jpa_inner_structure.md
@@ -9,3 +9,22 @@
 - 영속성 엔티는 동일성을 보장하는데 이 동일성이 보장되는 이유는 객체들이 1차캐시에 전부 모여있기 떄문이다.
 
 
+```java
+
+EntityManager em = emf.createEntityManager();
+EntityTransaction transaction = em.getTransaction();
+transaction.begin(); // [트랜잭션] 시작
+
+// 영속 엔티티 조회
+Member memberA = em.find(Member.class, "memberA");
+
+// 영속 엔티티 데이터 수정
+memberA.setUsername("kimyongbin");
+memberA.setAge(1000000);
+
+
+> //em.update(member) 이런 코드가 있어야 영속성컨텍스트에 다시 저장되지 않을까??
+
+But!!! 필요하지 않고 커밋하는 순간 바로 수정된다 
+```
+
