--- a/Jpa/03. jpa_inner_structure.md
+++ b/Jpa/03. jpa_inner_structure.md
@@ -28,3 +28,10 @@ memberA.setAge(1000000);
 But!!! 필요하지 않고 커밋하는 순간 바로 수정된다 
 ```
 
+이유는 영속성 컨텍스트는 최초상태를 '스냅샷'을 떠놓는다.
+그래서 flush() 할떄 JPA가 내부적으로 스냅샷과 비교하여 변동된 부분을 다시 쿼리날려 수정하기 떄문이다.
+또한 수정은 영속성컨텍스트를 비우는것이 아닌 변경내용을 데이터베이스에 동기화 하는것이다 .
+
+flush = 영속성컨텍스트의 변경내용을 데이터베이스에 반영하는것
+- commit , JPQL쿼리 실행 시에는 자동으로 된다 . ( 등록, 수정 , 삭제 ) 를 말함.
+
