--- a/Jpa/03. jpa_inner_structure.md
+++ b/Jpa/03. jpa_inner_structure.md
@@ -33,5 +33,6 @@ But!!! 필요하지 않고 커밋하는 순간 바로 수정된다
 또한 수정은 영속성컨텍스트를 비우는것이 아닌 변경내용을 데이터베이스에 동기화 하는것이다 .
 
 flush = 영속성컨텍스트의 변경내용을 데이터베이스에 반영하는것
+- 수정된 엔티티 쓰기 지연 SQL 저장소에 등록
 - commit , JPQL쿼리 실행 시에는 자동으로 된다 . ( 등록, 수정 , 삭제 ) 를 말함.
 
