--- a/Jpa/04. jpa_entity_mapping.md
+++ b/Jpa/04. jpa_entity_mapping.md
@@ -5,7 +5,7 @@
  @Entity가 붙은 클래스는 ' JPA가 관리하는 엔티티' 라 한다. 
  JPA를 사용해서 테이블과 매핑할 클래스는 @Entity 필수
 
-특징 
+#### 특징 
 - 기본 생성자 필수(파라미터가 없는 public 또는 protected 생성자) 
 - final 클래스, enum, interface, inner 클래스 사용X 
 - 저장할 필드에 final 사용 X
@@ -13,6 +13,16 @@
 
  
  2. 필드와 컬럼 매핑: @Column
+
+@Column :컬럼 매핑
+- nullable(DDL) null 값의 허용 여부를 설정한다. false로 설정하면 DDL 생성 시에 not null 제약조건이 붙는다.
+@Enumerated: enum 타입 매핑
+- EnumType.STRING: enum 이름으로만 데이터베이스 저장 !!!!! (꼭 기억)
+@Transient 특정 필드를 컬럼에 매핑하지 않음(매핑 무시)
+
+@LocalDate ( 년, 월) , LocalDateTime (년,월,일)이 JAVA8 이상부터 들어와서 그대로 사용가능! 
+
+
  
  3. 기본 키 매핑: @Id
  
