--- a/Jpa/04. jpa_entity_mapping.md
+++ b/Jpa/04. jpa_entity_mapping.md
@@ -1,6 +1,6 @@
 ### Entity mapping의 종류 
 
- 1. 객체와 테이블 매핑: @Entity, @Table
+### 1. 객체와 테이블 매핑: @Entity, @Table
 > @Entity
  @Entity가 붙은 클래스는 ' JPA가 관리하는 엔티티' 라 한다. 
  JPA를 사용해서 테이블과 매핑할 클래스는 @Entity 필수
@@ -12,7 +12,7 @@
 
 
  
- 2. 필드와 컬럼 매핑: @Column
+### 2. 필드와 컬럼 매핑: @Column
 
 @Column :컬럼 매핑
 - nullable(DDL) null 값의 허용 여부를 설정한다. false로 설정하면 DDL 생성 시에 not null 제약조건이 붙는다.
@@ -25,5 +25,13 @@
 
  
  3. 기본 키 매핑: @Id
+ > 직접 할당: @Id만 사용
+> 자동 생성(@GeneratedValue) 
+- IDENTITY: 데이터베이스에 위임, MYSQL , 기본 키 생성을 데이터베이스에 위임 (" 난 모르겠고 DB야 알아서 키 설정해줘")
+- SEQUENCE: 데이터베이스 시퀀스 오브젝트 사용, 유일한 값을 순서대로 생성하는 특별한 데이터베이스 오브젝트
+- AUTO: 방언에 따라 자동 지정, 기본값
+
+- 권장하는 기본키는 'Long형 + 대체키 + 키 생성전략 사용'
+
  
  4. 연관관계 매핑: @ManyToOne,@JoinColumn
