--- a/Jpa/05. jpa_entity_relation_mapping.md
+++ b/Jpa/05. jpa_entity_relation_mapping.md
@@ -25,8 +25,11 @@
 ### 연관관계 주인
 > 테이블은 외래 키 하나로 두 테이블이 연관관계를 맺음, But, 객체 양방향 관계는 A->B, B->A 처럼 참조가 2군데
 - 객체 양방향 관계는 참조가 2군데 있음. 둘중 테이블의 외래 키를 관리할 곳을 지정
+즉, 내가 회원 객체 및 테이블을 바꾸고 싶거나, team을 바꾸고싶을떄 멤버의 table을 바꿔야할지? team의 member값을 바꿔야할지 고민이된다.
+그 과정에서 나온게 외래키 관리를 하며 연관관계의 주인이 정해졌다 .
 
-그러므로 연관관계의 주인은 1:N의 N을 주인으로 한다 즉,외래 키를 관리하는 참조
+
+그러므로 연관관계의 주인은 1:N의 'N을 주인' 으로 한다 즉,외래 키를 관리하는 참조
 - 주인의 반대편은 외래 키에 영향을 주지 않는다, 단순 조회만 가능
 
 ### 일대다 단방향 정리
@@ -38,6 +41,12 @@
 
 @OnetoMany에서 (mapped by = "~~ " ) 
 는 나의 반대편에는 ~~~ 과 매핑되어 있다는 의미 
+
+
+### 양방향 연관관계 
+> 양쪽에 다 값을 넣어줘야 오류가 없음 즉 양방향 연관관계일떄 양쪽값을 선정해준다.
+
+
 
 
 
