--- a/Jpa/04. jpa_entity_mapping.md
+++ b/Jpa/04. jpa_entity_mapping.md
@@ -16,6 +16,23 @@
 
 @Column :컬럼 매핑
 - nullable(DDL) null 값의 허용 여부를 설정한다. false로 설정하면 DDL 생성 시에 not null 제약조건이 붙는다.
+
+>애트리뷰트
+- nullable
+컬럼에 null 값을 허용할지 여부를 지정하고 디폴트 값은 true
+웹에서 자주사용되는 email 주소는 일반적으로 회원 정보에서 ID로 많이 사용되며, 따라서 필수 항목이기때문에 nullable 값을 false로 지정하는게 좋음.
+
+- updatable
+컬럼 데이터를 수정할 수 있는지 여부를 지정하고 디폴트 값은 true.
+여기서는 email 주소가 사용자 ID 역할을 한다고 가정하고 한번 등록되면 수정이 불가능하도록 하기 위해서 updatable 값을 false로 지정할 수 있음.
+
+- unique
+하나의 컬럼에 unique 유니크 제약 조건을 설정하는고 디폴트 값은 false.
+만약 email의 경우 고유한 값이어야 하므로 unique 값을 true로 지정해야함 ( 즉, 유일한 값일떄는 true로 지정) 
+```java  // Column애트리뷰트 예시
+   @Column(nullable = false, updatable = false, unique = true)
+    private String email;
+```
 @Enumerated: enum 타입 매핑
 - EnumType.STRING: enum 이름으로만 데이터베이스 저장 !!!!! (꼭 기억)
 @Transient 특정 필드를 컬럼에 매핑하지 않음(매핑 무시)
