--- a/Jpa/05. jpa_entity_relation_mapping.md
+++ b/Jpa/05. jpa_entity_relation_mapping.md
@@ -28,6 +28,9 @@
 즉, 내가 회원 객체 및 테이블을 바꾸고 싶거나, team을 바꾸고싶을떄 멤버의 table을 바꿔야할지? team의 member값을 바꿔야할지 고민이된다.
 그 과정에서 나온게 외래키 관리를 하며 연관관계의 주인이 정해졌다 .
 
+> mappedby(name = " " ) 설정을 쉽게하기 위해서 이렇게 이해하면됨
+- 두 객체들 간에 외래키의 역할을 하는 필드는 무엇인가?
+- 외래키의 역할을 하는 필드는 다(N)에 해당하는 클래스 안에 있다.
 
 그러므로 연관관계의 주인은 1:N의 'N을 주인' 으로 한다 즉,외래 키를 관리하는 참조
 - 주인의 반대편은 외래 키에 영향을 주지 않는다, 단순 조회만 가능
