--- a/Jpa/07. jpa_transaction.md
+++ b/Jpa/07. jpa_transaction.md
@@ -13,23 +13,30 @@
 트랜잭션 특징
 1. 원자성(Atomicity)
 트랜잭션에서의 원자성이란 작업을 더이상 쪼갤 수 없음을 의미
-커피 주문 작업과 스탬프 횟수를 증가시키는 두 작업은 어떤 작업은 처리해도 되고, 어떤 작업은 처리하지 않아도 되는 식으로 쪼개서 처리할 수 없다.
+커피 주문 작업과 스탬프 횟수를 증가시키는 두 작업은 어떤 작업은 처리해도 되고,
+어떤 작업은 처리하지 않아도 되는 식으로 쪼개서 처리할 수 없다.
 따라서 논리적으로 하나의 작업으로 인식해서 둘 다 성공하든가 둘 다 실패하든가(All or Nothing) 중에서 하나로만 처리되는 것이 보장되어야함을 나타내는 것이 원자성
 
 
 2. 일관성(Consistency)
-일관성은 트랜잭션이 에러없이 성공적으로 종료될 경우, 비즈니스 로직에서 의도하는대로 일관성있게 저장되거나 변경되는 것을 의미 주문한 커피의 수 만큼, 스탬프 횟수가 증가한다는 비즈니스 로직에 맞게 저장되거나 변경되어야 합니다.
-즉, 회원이 3잔의 커피를 주문했으면 스탬프 횟수가 3 증가한 값으로 저장이 되어있을거라고 예상했는데, 3이 아닌 숫자로 증가한 값이 조회 된다면 일관성에 위배 
+일관성은 트랜잭션이 에러없이 성공적으로 종료될 경우, 비즈니스 로직에서 의도하는대로 일관성있게 저장되거나 변경되는 것을 의미 주문한 커피의 수 만큼, 
+스탬프 횟수가 증가한다는 비즈니스 로직에 맞게 저장되거나 변경되어야 합니다.
+즉, 회원이 3잔의 커피를 주문했으면 스탬프 횟수가 3 증가한 값으로 저장이 되어있을거라고 예상했는데, 
+3이 아닌 숫자로 증가한 값이 조회 된다면 일관성에 위배 
 
 
 3.격리성(Isolation)
 격리성은 여러 개의 트랜잭션이 실행될 경우 각각 독립적으로 실행이 되어야 함을 의미합니다.
-예를 들어, 컴퓨터에서 워드 작업을 하고 있고, 동시에 뮤직 플레이어로 음악을 듣고 있다면 우리 눈에는 보이지 않지만 CPU는 위 두 가지 프로세스를 아주 빠른 속도로 번갈아가면서 실행을 시킨다.
+예를 들어, 컴퓨터에서 워드 작업을 하고 있고, 동시에 뮤직 플레이어로 음악을 듣고 있다면 
+우리 눈에는 보이지 않지만 CPU는 위 두 가지 프로세스를 아주 빠른 속도로 번갈아가면서 실행을 시킨다.
+
 이처럼 데이터베이스 역시 성능 향상을 목적으로 한 개 이상의 트랜잭션을 번갈아가면서 처리할 수 있는데, 이 경우 각 트랜잭션이 다른 트랜잭션에 영향을 주지 않고 독립적으로 실행이 되어야 한다는 것이 바로 격리성(Isolation)이다.
 
 
 4. 지속성(Durability)
 트랜잭션이 완료되면 그 결과는 지속되어야 한다는 의미
-즉, 지속성은 여러분들이 잘 알고있다시피 데이터베이스가 종료되어도 데이터는 물리적인 저장소에 저장되어 지속적으로 유지되어야 한다는 의미(jpa 영속성 컨텍스트 생각하면됨)
+즉, 지속성은 여러분들이 잘 알고있다시피 데이터베이스가 종료되어도 
+데이터는 물리적인 저장소에 저장되어 지속적으로 유지되어야 한다는 의미(jpa 영속성 컨텍스트 생각하면됨)
 
 
+데이터베이스에서 사용되는 명령어
