--- a/Jpa/07. jpa_transaction.md
+++ b/Jpa/07. jpa_transaction.md
@@ -39,4 +39,51 @@
 데이터는 물리적인 저장소에 저장되어 지속적으로 유지되어야 한다는 의미(jpa 영속성 컨텍스트 생각하면됨)
 
 
-데이터베이스에서 사용되는 명령어
+#### 데이터베이스에서 사용되는 명령어
+커밋(commit)
+- 커밋(commit)은 모든 작업을 최종적으로 데이터베이스에 반영하는 명령어로써  commit 명령을 수행하면 변경된 내용이 데이터베이스에 영구적으로 저장
+- commit 명령을 수행하지 않으면 작업의 결과가 데이터베이스에 최종적으로 반영되지 않는다
+- commit 명령을 수행하면, 하나의 트랜젝션 과정은 종료
+
+롤백(rollback)
+- 롤백(rollback)은 작업 중 문제가 발생했을 때, 트랜잭션 내에서 수행된 작업들을 취소.
+따라서 트랜잭션 시작 이 전의 상태로 되돌아간다.
+
+
+> Spring Boot을 사용하고 있기 때문에 트랜잭션 관련 설정은 Spring Boot이 내부적으로 알아서 해준다.
+
+
+Spring 기반의 애플리케이션에 트랜잭션을 적용방법
+
+### 애너테이션 방식의 트랜잭션 적용
+> @Transactional이라는 애너테이션을 트랜잭션이 필요한 영역에 추가하기
+> 즉, 클래스 레벨에 @Transactional적용 
+
+```java
+
+
+@Service
+@Transactional  
+public class MemberService {
+    private final MemberRepository memberRepository;
+
+    public MemberService(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    }
+
+    public Member createMember(Member member) {
+        verifyExistsEmail(member.getEmail());
+
+        return memberRepository.save(member);  //저장소에 저장 
+    }
+// @Transactional 애너테이션을 클래스 레벨에 추가하면 기본적으로 해당 클래스에서 MemberRepository의 기능을 이용하는 모든 메서드에 트랜잭션    
+ ```
+ ### 메서드 레벨에 @Transactional 적용
+```java
+   @Transactional(readOnly = true)
+    public Member findMember(long memberId) {
+        return findVerifiedMember(memberId);
+    }
+    //읽기 전용 트랜잭션이 되면 jpa성능이 올라감 
+```
+
