--- a/Security/01. springboot_security_concept.md
+++ b/Security/01. springboot_security_concept.md
@@ -25,21 +25,17 @@ Principal(접근 주체): 보호받는 Resource에 접근하는 대상
 Credential(비밀번호): Resource에 접근하는 대상의 비밀번호
 
 Spring Security 의존성 추가 방법
-spring security의 의존성이 추가되지 않은 경우 해당 url을 접속하였을 때 아무런 보안, 인증 없이 접속이 가능합니다. 그러한 프로젝트에 다음과 같이 spring security의존성을 추가해보겠습니다.
+spring security의 의존성이 추가되지 않은 경우 해당 url을 접속하였을 때 아무런 보안, 인증 없이 접속이 가능합니다. 프로젝트 진행시 
+spring security의존성을 추가해야한다.
 
-Maven 방식
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+```java
 Gradle방식
 
 implementation 'org.springframework.boot:spring-boot-starter-security'
 implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+```
 
-
-security의존성을 추가하면 다음 사진과 같이 특정 url에 접속을 할 때 인증을 받게 됩니다.
+security의존성을 추가하면 다음 사진과 같이 특정 url에 접속을 할 때 인증을 받게 된다.
 해당 로그인 화면은 Spring Security에서 제공하는 기본적인 로그인 페이지이며 사용자의 설정에 따라 사용자가 직접 만든 디자인의 페이지로 변경이 가능합니다.
 
 해당 페이지의 로그인 정보는 기본 설정으로 Username, 즉 id는 user가 기본 아이디이며 패스워드는 아래의 이미지의 네모로 표시된 부분이 기본 비밀번호가 됩니다.
