--- a/Security/01. springboot_security_concept.md
+++ b/Security/01. springboot_security_concept.md
@@ -36,15 +36,11 @@ implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 ```
 
 security의존성을 추가하면 다음 사진과 같이 특정 url에 접속을 할 때 인증을 받게 된다.
-해당 로그인 화면은 Spring Security에서 제공하는 기본적인 로그인 페이지이며 사용자의 설정에 따라 사용자가 직접 만든 디자인의 페이지로 변경이 가능합니다.
+![인증 1](https://user-images.githubusercontent.com/99226598/183634442-f930a8e1-c91d-4bb0-93ef-66ef531a40a1.png)
 
-해당 페이지의 로그인 정보는 기본 설정으로 Username, 즉 id는 user가 기본 아이디이며 패스워드는 아래의 이미지의 네모로 표시된 부분이 기본 비밀번호가 됩니다.
+해당 로그인 화면은 Spring Security에서 제공하는 기본적인 로그인 페이지이며 사용자의 설정에 따라 사용자가 직접 만든 디자인의 페이지로 변경이 가능!
 
+해당 페이지의 로그인 정보는 기본 설정으로 Username, 즉 id는 user가 기본 아이디이며 패스워드는 아래의 이미지의 네모로 표시된 부분이 기본 비밀번호가 된다.
+- 인텔리제이 서버 돌리고 하단에 비밀번호 나타남 
+해당 아이디와 비밀번호를 입력을 하여 접속을 하면 접속하고자 하였던 url에 접속 할 수있다.
 
-
-해당 아이디와 비밀번호를 입력을 하여 접속을 하면 접속하고자 하였던 url에 접속을 하실 수 있습니다.
-
-아이디와 비밀번호는 application.properties에서 다음과 같이 고정된 id/pw를 설정하여 테스트를 할 수도 있습니다.
-
-spring.security.user.name=user
-spring.security.user.password=1111
