--- a/Security/01. springboot_security_concept.md
+++ b/Security/01. springboot_security_concept.md
@@ -1,3 +1,4 @@
+![spring security](https://user-images.githubusercontent.com/99226598/183634705-761cf94a-86d9-49e7-9c16-dbab7322a3c3.png)
 
 ## Spring Security란?
 
