--- a/Security/02. springboot_security_basic.md
+++ b/Security/02. springboot_security_basic.md
@@ -1,2 +1,42 @@
 ## 동작구조
 ![기본동작구조](https://user-images.githubusercontent.com/99226598/183640439-2577f2e2-f1f2-46fc-893c-9326063cc3b1.png)
+
+
+  ### spring security 구조 설명 
+  
+- Spring Security의 의존성을 추가한 경우 WebSecurityConfigurerAdapter클래스가 자동 실행
+- WebSecurityConfigurerAdapter클래스는 스프링 시큐리티의 웹 보안 기능의 초기화 및 설정들을 담당하는 내용이 담겨있으며 내부 적으로 getHttp()메서드가 실행될 때 HTTPSecurity 클래스를 생성.
+- 이때의 HTTPSecurity는 인증/인가 API들의 설정을 제공합니다.
+
+#### 기본적으로 적용되는 filter 포함한 configuration 메서드
+```java
+	private void applyDefaultConfiguration(HttpSecurity http) throws Exception {
+		http.csrf();
+		http.addFilter(new WebAsyncManagerIntegrationFilter());
+		http.exceptionHandling();
+		http.headers();
+		http.sessionManagement();
+		http.securityContext();
+		http.requestCache();
+		http.anonymous();
+		http.servletApi();
+		http.apply(new DefaultLoginPageConfigurer<>());
+		http.logout();
+    
+    ```
+    
+    > 인증/인가의 설정을 바꾸고자 한다면 WebSecurityConfigurerAdapter클래스를 상속한 
+    SecurityConfig클래스를 생성 
+    configure(HttpSecurity http)메서드를 override하며 설정해야한다.
+    
+    ```java
+    
+    	protected void configure(HttpSecurity http) throws Exception {
+		this.logger.debug("Using default configure(HttpSecurity). "
+				+ "If subclassed this will potentially override subclass configure(HttpSecurity).");
+		http.authorizeRequests((requests) -> requests.anyRequest().authenticated());
+		http.formLogin();
+		http.httpBasic();
+	}
+  ```
+  
