--- a/Security/02. springboot_security_basic.md
+++ b/Security/02. springboot_security_basic.md
@@ -25,8 +25,7 @@
   
     
     > 인증/인가의 설정을 바꾸고자 한다면 WebSecurityConfigurerAdapter클래스를 상속한 
-    SecurityConfig클래스를 생성 
-    configure(HttpSecurity http)메서드를 override하며 설정해야한다.
+    SecurityConfig클래스를 생성하고 configure(HttpSecurity http)메서드를 override하며 설정해야한다.
     
 
     
