--- a/Security/01. springboot_security_concept.md
+++ b/Security/01. springboot_security_concept.md
@@ -6,6 +6,28 @@
 Spring Security는 '인증(Authentication)'과 '권한(Authorization)'에 대한 부분을 Filter의 흐름에 따라 처리를 하고 있다.
 많은 보안 관련 옵션들을 제공해주어 개발자가 보안 로직을 하나씩 작성하지 않아도 되는 장점이 있다.
 
+### 필수 용어 및 개념
+
+#### 주체(Principal)
+
+유저, 기기, 시스템 등이 될 수 있지만 보통 유저(사용자)를 의미
+
+#### 인증(Authentication)
+
+특정 리소스에 접근하려고 하는 사용자가 누구인지 확인할 때 사용,주체의 신원(identity)을 증명하는 과정
+주체는 자신을 인증해달라고 신원 증명 정보(credential)을 제시하고 주체가 유저일 경우 신원 증명 정보는 패스워드이다.
+
+#### 인가(Authorization = 권한 부여)
+
+인증을 마친 유저에게 권한(authority)을 부여하여 애플리케이션의 특정 리소스에 접근할 수 있게 허가하는 과정
+인가는 반드시 인증 과정 이후 수행되어야하며 권한은 롤 형태로 부여하는게 일반적이다.
+
+#### 접근 통제(Access control)
+
+어떤 유저가 애플리케이션 리소스에 접근하도록 허락할지를 제어
+리소스의 접근 속성과 유저에게 부여된 권한 또는 다른 속성들을 결정
+
+
 ## 인증(Authentication)과 권한(Authorization)
 
 ### 인증(Authentication)
