--- a/Security/04. springboot_security_filter.md
+++ b/Security/04. springboot_security_filter.md
@@ -1,1 +1,9 @@
+## springboot filter 
 
+
+<img width="801" alt="filter" src="https://user-images.githubusercontent.com/99226598/184124400-d4f0e92b-5add-4e6d-9856-e8c7c60ba44b.png">
+
+Spring Security는 DelegatingFilterProxy 라는 필터를 만들어 메인 Filter Chain에 끼워넣고, 그 아래 다시 SecurityFilterChain 그룹을 등록한다.
+그렇게 하며 URL에 따라 적용되는 Filter Chain을 다르게 하는 방법을 사용하고 어떠한 경우에는 해당 Filter를 무시하고 통과하게 할 수도 있다.
+WebSecurityConfigurerAdapter는 Filter chian을 구성하는 Configuration클래스로 해당 클래스의 상속을 통해 Filter Chain을 구성할 수 있다.
+configure(HttpSecurity http)를 override하며 filter들을 세팅
