--- a/Security/04. springboot_security_filter.md
+++ b/Security/04. springboot_security_filter.md
@@ -7,3 +7,23 @@ Spring Security는 DelegatingFilterProxy 라는 필터를 만들어 메인 Filte
 그렇게 하며 URL에 따라 적용되는 Filter Chain을 다르게 하는 방법을 사용하고 어떠한 경우에는 해당 Filter를 무시하고 통과하게 할 수도 있다.
 WebSecurityConfigurerAdapter는 Filter chian을 구성하는 Configuration클래스로 해당 클래스의 상속을 통해 Filter Chain을 구성할 수 있다.
 configure(HttpSecurity http)를 override하며 filter들을 세팅
+
+```java
+@EnableWebSecurity(debug = true) // request가 올 떄마다 어떤 filter를 사용하고 있는지 출력을 해준다.
+@EnableGlobalMethodSecurity(prePostEnabled = true) // 사전에 prePost로 권한체크를 하겠다는 설정!!
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+// WebSecurityConfigurerAdapter`는 Filter chian을 구성하는 Configuration클래스
+
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+    // HttpSecurity를 설정하는 것이 Filter들을 Setting하는 것이다.
+        http.authorizeRequests((requests) ->
+                requests.antMatchers("/").permitAll()
+                        .anyRequest().authenticated()
+        );
+        http.formLogin(login->
+                login.defaultSuccessUrl("/", false));
+       http.httpBasic();
+    }
+}
+```
