--- a/Security/04. springboot_security_filter.md
+++ b/Security/04. springboot_security_filter.md
@@ -46,3 +46,33 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 - SessionManagementFilter : 서버에서 지정한 세션정책에 맞게 사용자가 사용하고 있는지 검사하는 역할을 한다.
 - ExcpetionTranslationFilter : 해당 필터 이후에 인증이나 권한 예외가 발생하면 해당 필터가 처리를 해준다.
 - FilterSecurityInterceptor : 사용자가 요청한 request에 들어가고 결과를 리턴해도 되는 권한(Authorization)이 있는지를 체크한다. 해당 필터에서 권한이 없다는 결과가 나온다면 위의 ExcpetionTranslationFilter필터에서 Exception을 처리해준다.
+
+
+## Filter Chain이 적용되는 URL설정하는 방법
+
+해당 filter를 동작시킬 URL을 설정하려면 http.antMatcher를 통해 설정해야한다.
+모든 request에 대해 동작하려면 다음과 같이 http.antMatcher("/**")로 한다.
+여러 종류의 URL에 대해 여러 Filter를 만들고 싶다면 SecurityConfig 클래스를 여러개 만들어줘야하며 여러개의 sequrityConfig은 순서가 중요하여 class위에 @Order annotation을 붙여줘야한다.
+
+```java
+
+@Order(1) // order가 낮은 것부터 먼저 설정을 한다.
+@EnableWebSecurity(debug = true)
+@EnableGlobalMethodSecurity(prePostEnabled = true)
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+    
+     	http.antMatcher("/**"); // 해당 filter가 동작할킬 URL을 설정하려면 antMatcher를 통해 설정해야한다.
+       
+        http.authorizeRequests((requests) ->
+                requests.antMatchers("/").permitAll()
+                        .anyRequest().authenticated()
+        );
+        http.formLogin(login->
+                login.defaultSuccessUrl("/", false));
+       http.httpBasic();
+    }
+}
+```
