--- a/SpringBoot/springboot+jpa_webapplication/08. orderservice.md
+++ b/SpringBoot/springboot+jpa_webapplication/08. orderservice.md
@@ -38,4 +38,49 @@ public class OrderService {
         Order order = orderRepository.findOne(orderId);
         //주문 취소
         order.cancel();
+   ```
+   
+   
+   ## 깔끔하게 리팩토링
+   
+   ```java
+   
+      //주문
+    @Transactional
+    public Long order(Long memberId,Long itemId,int count) {
+       //엔티티조회
+   Member member = memberRepository.findMember(memberId);
+   Item item = itemRepository.findOne(itemId);
+
+       //배송정보 생성
+        Delivery delivery = new Delivery();
+        delivery.setAddress(member.getAddress());
+
+        // * 주문상품 생성 (생성메서드를 쓸 차례)
+      OrderItem orderItem = OrderItem.createOrderItem(item,item.getPrice(),count);
+
+
+        // ** 주문 생성
+       Order order = Order.createOrder(member,delivery,orderItem);
+
+        // *** DB에 주문 저장
+        orderRepository.save(order);
+        return order.getId();
     }
+
+
+
+    //취소
+    @Transactional
+    public void cancelOrder(Long orderId){
+        //주문 엔티티를 조회
+        Order order = orderRepository.findOne(orderId);
+        //주문 취소
+        order.cancel();
+
+    }
+
+    //검색
+
+}
+```
