--- a/SpringBoot/springboot+jpa_webapplication/10. memberservice.md
+++ b/SpringBoot/springboot+jpa_webapplication/10. memberservice.md
@@ -41,4 +41,35 @@ public class MemberService {
     }
 
 
+//member repository 추가구현
+
+   private final EntityManager em;
+
+    //데이터베이스에 저장하는 로직
+    public void save(Member member){
+        em.persist(member);
+    }
+    //데이터베이스에서 회원 찾는 로직
+    public Member findMember(Long id){
+     return em.find(Member.class,id);
+    }
+
+
+    //데이터베이스에서 회원 전체 찾는 로직,여러명 찾을떄는 createquery 작성 해야한다.
+    //배열 결과 만들어주는 .getResultList(); 까먹지 말기!
+    public List<Member> findAll(){
+        List<Member> result = em.createQuery("select m from Member m",Member.class)
+                .getResultList();
+                return result;
+    }
+
+    //이름이 같은사람이 여러명일 수 있으니 List를 반환타입으로 설정한다.
+    public List<Member> findByName(String name){
+
+        return em.createQuery("select m from Member m where m.name =: name", Member.class)
+                .setParameter("name",name)   //매개변수 값 설정
+                .getResultList();
+
+    }
+
 ```
