--- a/SpringBoot/springboot+jpa_webapplication/11. member_form_controller.md
+++ b/SpringBoot/springboot+jpa_webapplication/11. member_form_controller.md
@@ -26,6 +26,7 @@ public class MemberController {
     }
 
     //BindingResult는 오류가 생겨도 오류로 튕겨내는게 아닌 그대로 실행이됨
+    //회원 등록하는 메서드는 MemberForm 즉, 넘어온 데이터들을 매개변수로 받음 ! 
     @PostMapping("/members/new")
     public String create(@Valid MemberForm form, BindingResult result){
 
