--- a/SpringBoot/springboot+jpa_webapplication/11. member_form_controller.md
+++ b/SpringBoot/springboot+jpa_webapplication/11. member_form_controller.md
@@ -42,6 +42,7 @@ public class MemberController {
         return "redirect:/";
     }
 
+    //등록된 회원 목록을 보여주는 핸들러메서드, 
     //model을 통해 화면에 객체를 전달한다.
     @GetMapping("/members")
     public String list(Model model){
