--- a/SpringBoot/springboot+jpa_webapplication/11. member_form_controller.md
+++ b/SpringBoot/springboot+jpa_webapplication/11. member_form_controller.md
@@ -51,3 +51,15 @@ public class MemberController {
     model.addAttribute("members",members);
     return "members/memberList";
     }
+
+타임리프로 회원목록 구현
+    //model로 데이터 넘어온 members를 반복루프 돌려서 뿌려줌
+<tbody>
+ <tr th:each="member : ${members}">
+ <td th:text="${member.id}"></td>
+ <td th:text="${member.name}"></td>
+ <td th:text="${member.address?.city}"></td>
+ <td th:text="${member.address?.street}"></td>
+ <td th:text="${member.address?.zipcode}"></td>
+ </tr>
+ </tbody>
