Update 13. update method.md

--- a/SpringBoot/springboot+jpa_webapplication/13. update method.md
+++ b/SpringBoot/springboot+jpa_webapplication/13. update method.md
@@ -42,6 +42,9 @@ public class ItemService {
  private final ItemRepository itemRepository;
 
  //영속성 컨텍스트가 자동변경 
+ 
+ 
+ // 데이터에 접근할 수 있는 repository에서 id를 명확히 찾고 , 그것을 통해 이름과 가격을 새로 변경해준다.
  @Transactional
  public void updateItem(Long id, String name, int price) {
  Item item = itemRepository.findOne(id);
