--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -31,5 +31,26 @@ public class SecurityConfig {
                 .loginPage("/login");
                 return http.build();
     }
+    
+    
+    //view 
+    
+    @Configuration
+public class WebMvcConfig implements WebMvcConfigurer {
+
+    @Override
+    public void configureViewResolvers(ViewResolverRegistry registry) {
+        //mustacher의 객체를 생성해서 resolver라는 공간에 설정을 담는다
+        MustacheViewResolver resolver = new MustacheViewResolver();
+        resolver.setCharset("UTF-8");
+        resolver.setContentType("text/html; charset=UTF-8");
+        resolver.setPrefix("classpath:/templates/");
+        resolver.setSuffix(".html");
+
+        registry.viewResolver(resolver);
+    }
+
+    
+    
 
 ```
