--- a/Security/06. springboot_security_memberjoin_pwencoder.md
+++ b/Security/06. springboot_security_memberjoin_pwencoder.md
@@ -46,6 +46,9 @@ public class IndexController {
         return "redirect:/login";
     }
 
+```
+![비밀번호 암호화](https://user-images.githubusercontent.com/99226598/184868418-e8de5d01-617c-4566-ab9b-ec1ddc27ce38.PNG)
+
 
 
 
