--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -1,3 +1,4 @@
+## 의미를 풀어써서 이해를 높인다! 
 ```java
 @Configuration
 @EnableWebSecurity
@@ -28,6 +29,8 @@ public class SecurityConfig {
                 //모든 리소스를 의미하며 접근허용 리소스 및 인증후 특정 레벨의 권한을 가진 사용자만 접근가능한 리소스를 설정하고 그외 나머지 리소스들은 무조건 인증을 완료해야 접근이 가능하다는 의미.
                 .anyRequest().permitAll()
                 //권한이 없을떄 에러뜨던 admin,user,manager에서 login 글자가 뜰 수 있도록 만듦 즉 , 에러 안뜸
+                
+                //로그인을 해야되는 form들은 (아직 권한이 없는)것들은 로그인 페이지로 이동할 수 있게한다. -> 에러 뜨지않게해준다
                 .and()
                 .formLogin()
                 .loginPage("/login");
