--- a/Security/06. springboot_security_memberjoin_pwencoder.md
+++ b/Security/06. springboot_security_memberjoin_pwencoder.md
@@ -13,7 +13,8 @@ public class SecurityConfig {
 
 @Controller
 public class IndexController {
-
+	
+    //Controller에서 MemberRepository를 사용한다, why? 회원 가입시 회원을 DB에 저장시키기 위해!  	
     @Autowired
     private MemberRepository memberRepository;
     
