--- a/Security/06. springboot_security_memberjoin_pwencoder.md
+++ b/Security/06. springboot_security_memberjoin_pwencoder.md
@@ -43,7 +43,9 @@ public class IndexController {
        member.setPassword(encPassword);
        //DB에 비밀번호를 암호화해서 저장 (보안을 위해)
        memberRepository.save(member);
-
+		
+		
+	// 회원가입을 누르게 되면 localhost:8080/login로 이동, 즉 로그인페이지로 이동 	
         return "redirect:/login";
     }
 
