--- a/Security/07. springboot_security_login.md
+++ b/Security/07. springboot_security_login.md
@@ -1,3 +1,5 @@
+## 최대한 풀어써서 이해높이기
+
 ```java
 
 //login기능 구현
@@ -93,6 +95,8 @@ private MemberRepository memberRepository;
         System.out.println("username : " + username);
 
         //비어있지 않다면 PrincipalDetails에 찾으려는 아이디를 넣는다.
+        //하단 memberEntity !=null 의 의미는 회원이름이 저장되어 있다면 return new PrincipalDetails를 수행한다라는 뜻 
+        // 즉 기존의 아이디가 가입되어있는것이니 로그인이 구현된다라고 생각하자! 
         if(memberEntity != null) {
             //UserDetail가 return이 될떄,리턴된 값이 Authentication에 자동으로들어간다.
             //Authentication은 자동으로 Session에 들어간다.
