--- a/Jpa/07. jpa_transaction.md
+++ b/Jpa/07. jpa_transaction.md
@@ -8,7 +8,7 @@
 > 두 개의 작업들이 마치 하나의 그룹처럼 묶여서 처리되는 중에 둘 중 하나라도 처리에 실패할 경우 애플리케이션의 신뢰성이 깨지는 상황이 발생
 > 트랜잭션은 여러개의 작업들을 하나의 그룹으로 묶어서 처리하는 처리 단위
 
-- 트랜잭션은 전부 성공하거나 전부실패하거나 해야한다.
+> 즉 , 트랜잭션은 전부 성공하거나 전부실패하거나 해야한다!
 
 트랜잭션 특징
 1. 원자성(Atomicity)
