--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -10,3 +10,18 @@
 > 그래서 만들어진게 UserController, BoardController 등.. 관련된 요청을 나누어 분배한다.
 
 즉, 요청을 분기 나누어서 controller에 배정해주는것을 ServeletDisPatcher라 한다. ServeletDisPatcher는 client의 요청을 처리할 수 있는 적합한 Controller에 배정해주는 역할을 수행
+
+Http
+HTTP에 관련된 정보
+endpoint: http://Ip주소/user/Yb 이렇게 존재하는 Url이 있다고 가정하면,
+여기서 user/yb가 endpoint이다
+쉽게 말하자면 endPoint는 무엇을하길 원하는걸 client가 말하는 것
+Http Body 는 데이터를 담고 있다
+Post, Put이 Body에 데이터를 담고있음
+http Header의 Content Type 이해
+ContentType을 명시하고 보내야 받는 쪽이 편함
+ex. 쌀 ,보리 , 밀가루 포대가 있는데 앞에 무엇인지 안써놔있으면 일일이 다 검사하고 분류해야하므로 비효율적이다. 코딩에도 content Type을 같이 보내면 다 검사하지 않고 분류해도 되서 편해짐
+
+post,put에만 필요 get,delete는 body가 필요하지 않으므로!
+
+스프링부트는 기본적으로 x-www-form~~ 을 기본값으로 파싱한다.
