--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -11,11 +11,14 @@
 
 즉, 요청을 분기 나누어서 controller에 배정해주는것을 ServeletDisPatcher라 한다. ServeletDisPatcher는 client의 요청을 처리할 수 있는 적합한 Controller에 배정해주는 역할을 수행
 
-Http
+## Http
+
 HTTP에 관련된 정보
 endpoint: http://Ip주소/user/Yb 이렇게 존재하는 Url이 있다고 가정하면,
 여기서 user/yb가 endpoint이다
-쉽게 말하자면 endPoint는 무엇을하길 원하는걸 client가 말하는 것
+
+> 쉽게 말하자면 endPoint는 무엇을하길 원하는걸 client가 말하는 것
+
 Http Body 는 데이터를 담고 있다
 Post, Put이 Body에 데이터를 담고있음
 http Header의 Content Type 이해
