--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -28,3 +28,22 @@ ex. 쌀 ,보리 , 밀가루 포대가 있는데 앞에 무엇인지 안써놔있
 post,put에만 필요 get,delete는 body가 필요하지 않으므로!
 
 스프링부트는 기본적으로 x-www-form~~ 을 기본값으로 파싱한다.
+
+
+## Controller와 RestController의 차이
+
+Controller : File을 응답하는 Controller
+RestController : Data를 응답하는 Controller
+
+Controller에서 return 값은 html을 응답하는 경로를 제공하는 것이고
+RestController에서 return 값은 Data를 client에 전달해줌
+
+@Controller
+public class lab{
+
+....
+public String yb() {
+	return "index"
+	}   
+// index.html를 불러 client에 전달한다
+}
