--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -1,4 +1,5 @@
 ## Spring 내부
+
 > Spring은 servelet으로 형성되어있으며 servelet은 Java로 만들어졌다
 
 그러므로 Client가 요청을 할떄마다 JAVA파일을 호출해야한다
@@ -35,8 +36,8 @@ post,put에만 필요 get,delete는 body가 필요하지 않으므로!
 Controller : File을 응답하는 Controller
 RestController : Data를 응답하는 Controller
 
-Controller에서 return 값은 html을 응답하는 경로를 제공하는 것이고
-RestController에서 return 값은 Data를 client에 전달해줌
+> Controller에서 return 값은 html을 응답하는 경로를 제공하는 것이고
+> RestController에서 return 값은 Data를 client에 전달해줌
 
 @Controller
 public class lab{
