--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -12,6 +12,8 @@
 
 즉, 요청을 분기 나누어서 controller에 배정해주는것을 ServeletDisPatcher라 한다. ServeletDisPatcher는 client의 요청을 처리할 수 있는 적합한 Controller에 배정해주는 역할을 수행
 
+
+
 ## Http
 
 HTTP에 관련된 정보
@@ -31,6 +33,8 @@ post,put에만 필요 get,delete는 body가 필요하지 않으므로!
 스프링부트는 기본적으로 x-www-form~~ 을 기본값으로 파싱한다.
 
 
+
+
 ## Controller와 RestController의 차이
 
 Controller : File을 응답하는 Controller
@@ -42,9 +46,10 @@ RestController : Data를 응답하는 Controller
 @Controller
 public class lab{
 
-....
+...java
 public String yb() {
 	return "index"
 	}   
 // index.html를 불러 client에 전달한다
+```
 }
