--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -60,6 +60,7 @@ Url endPoint에 ?로 시작하면 쿼리스트링
 
 // 쿼리 스트링
 
+```java
 @GetMapiing("/chicken")
 public String chickenqu (String type){
 	return type + "배달갑니다"   
@@ -69,6 +70,8 @@ public String chickenqu (String type){
 public String chickenPath(@PathVariable String type){
 	return type + "배달갑니다"   
 }
+
+```
 이 둘의 차이는 URL에서 클라이언트가 (ip주소 / chicken2/ 양념 )
 이렇게 작성해서 보내면 클라이언트는 양념 배달갑니다를 바로 요청값으로 얻을 수 있음
 
