--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -57,9 +57,11 @@ public String yb() {
 
 Url endPoint에 ?로 시작하면 쿼리스트링
 
-// 쿼리 스트링
 
 ``` java
+
+// 쿼리 스트링
+
 @GetMapiing("/chicken")
 public String chickenqu (String type){
 	return type + "배달갑니다"   
@@ -71,7 +73,6 @@ public String chickenPath(@PathVariable String type){
 }
 
 ```
-이 둘의 차이는 URL에서 클라이언트가 (ip주소 / chicken2/ 양념 )
+> 이 둘의 차이는 URL에서 클라이언트가 (ip주소 / chicken2/ 양념 )
 이렇게 작성해서 보내면 클라이언트는 양념 배달갑니다를 바로 요청값으로 얻을 수 있음
-
 그러므로 주소변수 매핑이 사용에 간편하다.
