--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -18,11 +18,14 @@ public class SecurityConfig {
 
             //http.authorizeRequests()가 들어가야 antMacher를 통한 특정리소스 설정가능
                    http.authorizeRequests()
-
+                  
                 //antMatchers 특정 리소스에 대해서 권한을 설정
                 //antMatchers의 의미는 URL user로 들어올떄는 인증이 필요합니다. 라는 뜻이고 
                 //manager로 들어올떄는 admin,manager의 권한을 가져야합니다라는 뜻 
                 .antMatchers("/user/**").authenticated()
+                  // user,subscribe,comment.. 등으로 시작하는 URL은 인증이 필요하다는 뜻
+                
+                
                 .antMatchers("/manager/**").access("hasRole('Role_Admin') or hasRole('Role_Manager')")
                 .antMatchers("/admin/**").access("hasRole('Role_Admin')")
 
