--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -1,7 +1,7 @@
 ## 의미를 풀어써서 이해를 높인다! 
 ```java
-@Configuration
-@EnableWebSecurity
+@Configuration      //spring Bean으로 등록 
+@EnableWebSecurity  
 //@EnableWebSecurity 추가 시 스프링 시큐리티 필터가 스프링 필터체인에 등록
 public class SecurityConfig {
 
