--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -29,7 +29,7 @@ public class SecurityConfig {
                 .antMatchers("/manager/**").access("hasRole('Role_Admin') or hasRole('Role_Manager')")
                 .antMatchers("/admin/**").access("hasRole('Role_Admin')")
 
-                //모든 리소스를 의미하며 접근허용 리소스 및 인증후 특정 레벨의 권한을 가진 사용자만 접근가능한 리소스를 설정하고 그외 나머지 리소스들은 무조건 인증을 완료해야 접근이 가능하다는 의미.
+                //모든 리소스를 의미하며 접근허용 리소스 및 인증후 특정 레벨의 권한을 가진 사용자만 접근가능한 리소스를 설정하고 그외 나머지 리소스들은 무조건 인증을 완료해야 접근이 가능하다는 의미.  즉  ' 그게아닌 모든 요청은 허용하겠다'
                 .anyRequest().permitAll()
                 //권한이 없을떄 에러뜨던 admin,user,manager에서 login 글자가 뜰 수 있도록 만듦 즉 , 에러 안뜸
                 
