--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -40,7 +40,8 @@ public class SecurityConfig {
                 .formLogin()
                 .loginPage("/login");
                 
-              //클라이언트 요청시 403이 뜰떄, 권한필요한 403들을 loginpage로 갈 수있도록하는방법, login성공시 "/" 기본창으로 옮겨줌.
+              //클라이언트 요청시 403이 뜰떄, 권한필요한 403들을 loginpage로 갈 수있도록하는방법, 
+              //여기에 login성공시 "/" 기본창으로 옮겨줌.
 
                 return http.build();
     }
