--- a/Security/05. springboot_security_config.md
+++ b/Security/05. springboot_security_config.md
@@ -41,7 +41,7 @@ public class SecurityConfig {
                 .loginPage("/login");
                 
               //클라이언트 요청시 403이 뜰떄, 권한필요한 403들을 loginpage로 갈 수있도록하는방법, 
-              //여기에  .defaultSuccessUrl("/"); 가 붙으면 login성공시 "/" 기본창으로 옮겨줌.
+              //여기에  .defaultSuccessUrl("/"); 가 붙으면 login성공시 "/" 기본창 (괄호안의 창)으로 옮겨줌.
 
                 return http.build();
     }
