--- a/Security/01. springboot_security_concept.md
+++ b/Security/01. springboot_security_concept.md
@@ -8,7 +8,8 @@ Spring Security는 '인증(Authentication)'과 '권한(Authorization)'에 대한
 
 ## Spring Security 라이브러리의 역할
 
-어떤 클라이언트가 내홈페이지에 들어오려고 하면 인증이 되지 않은 모든 사용자들의 요청을 가로채서 
+어떤 클라이언트가 내홈페이지에 들어오려고 하면 인증이 되지 않은 모든 사용자들의 요청을 가로채서 localhost:8080/login으로 모든화면을 리다이렉션 한다.
+
 
 
 ## 필수 용어 및 개념
