--- a/Security/01. springboot_security_concept.md
+++ b/Security/01. springboot_security_concept.md
@@ -10,7 +10,7 @@ Spring Security는 '인증(Authentication)'과 '권한(Authorization)'에 대한
 
 >어떤 클라이언트가 내홈페이지에 들어오려고 하면 인증이 되지 않은 모든 사용자들의 요청을 가로채서 localhost:8080/login으로 모든화면을 리다이렉션 한다.
 
-
+- 리다이렉션: 어떤 주소요청이 왔을떄 그 주소요청을 변경해서 다른곳으로 보내주는 것 
 
 ## 필수 용어 및 개념
 
