--- a/Security/08. springboot_security_logininformation.md
+++ b/Security/08. springboot_security_logininformation.md
@@ -4,6 +4,8 @@
 
 ## 시큐리티 설정파일 진행과정
 
-client가 post로 login 요청이 들어오기를 Spring Security가 주시하고 있다
-어떤 클라이언트가 이러한 형식으로 로그인 요청을 하면 security config가 요청 http body의 username과 password를 바로 낚아챈다.
-다음 IOC에 등록되어있는 UserDetail Service가 투입되어 로그인 진행을 대신한다
+1. client가 post로 login 요청이 들어오기를 Spring Security가 주시하고 있다
+
+2. 어떤 클라이언트가 이러한 형식으로 로그인 요청을 하면 security config가 요청 http body의 username과 password를 바로 낚아챈다.
+
+3. 다음 IOC에 등록되어있는 UserDetail Service가 투입되어 로그인 진행을 대신한다
