--- a/Security/08. springboot_security_logininformation.md
+++ b/Security/08. springboot_security_logininformation.md
@@ -9,3 +9,15 @@
 2. 어떤 클라이언트가 이러한 형식으로 로그인 요청을 하면 security config가 요청 http body의 username과 password를 바로 낚아챈다.
 
 3. 다음 IOC에 등록되어있는 UserDetail Service가 투입되어 로그인 진행을 대신한다
+
+4. Principal Details Service가 던져주는것은 Username밖에 없음, password는 던져주지 않는다.
+password는 security가 알아서 해준다.
+
+
+
+### 추가정보
+
+Controller단에서 로그인을 한 유저만 유저정보변경, 내가 쓴 게시글 및 이미지 등 나의 데이터만을 볼 수 있는 방법
+security config에서 authenticated , ex. ( user/**, auth/**) ... 등 으로 로그인시에만 볼 수 있도록 권한 넣어놓으면 됨
+
+
