--- a/Security/08. springboot_security_logininformation.md
+++ b/Security/08. springboot_security_logininformation.md
@@ -20,5 +20,6 @@ password는 security가 알아서 해준다.
 Controller단에서 로그인을 한 유저만 유저정보변경, 내가 쓴 게시글 및 이미지 등 나의 데이터만을 볼 수 있는 방법
 security config에서 authenticated , ex. ( user/**, auth/**) ... 등 으로 로그인시에만 볼 수 있도록 권한 넣어놓으면 됨
 
+## security session 회원 정보 찾기 및 확인 과정
 
 ![security](https://user-images.githubusercontent.com/99226598/189664808-fba7701c-fa6f-4726-beb3-ce7decd4dbfd.jpg)
