--- a/Security/08. springboot_security_logininformation.md
+++ b/Security/08. springboot_security_logininformation.md
@@ -23,3 +23,6 @@ security config에서 authenticated , ex. ( user/**, auth/**) ... 등 으로 로
 ## security session 회원 정보 찾기 및 확인 과정
 
 ![security](https://user-images.githubusercontent.com/99226598/189664808-fba7701c-fa6f-4726-beb3-ce7decd4dbfd.jpg)
+
+
+![회원정보변경_PrincipalDetails](https://user-images.githubusercontent.com/99226598/189664991-c061a828-d2a0-4796-9732-44f910bf8668.PNG)
