--- a/Security/08. springboot_security_logininformation2.md
+++ b/Security/08. springboot_security_logininformation2.md
@@ -1,1 +1,3 @@
+## login 데이터들이 session에 저장되는 과정 및 session에 저장된 정보 활용하는 방법
+
 ![KakaoTalk_20220918_195723759](https://user-images.githubusercontent.com/99226598/190898708-b181ee24-d552-4a03-ab57-e6e9e0e499ba.jpg)
