--- a/Security/10. springboot_security_jwt_session.md
+++ b/Security/10. springboot_security_jwt_session.md
@@ -1,5 +1,11 @@
 ## JWT / SESSION
 
-로그인의 가장 큰 원칙: 내가 로그인했다는것을 서버거 알고 있어야 한다
+> 로그인의 가장 큰 원칙: 내가 로그인했다는것을 서버거 알고 있어야 한다
 
-인증 Authentication - 로그인
+- 인증 Authentication - 로그인
+(내가 이 사이트 이용자 임을 인증받는것 ) 
+
+-인가 Authorization
+(내 계정으로'만' 할 수 있는 활동시도 , 웹사이트가 내가 로그인 되어 있음을 알고 허가)
+
+세션 ->
