--- a/Security/10. springboot_security_jwt_session.md
+++ b/Security/10. springboot_security_jwt_session.md
@@ -8,4 +8,4 @@
 - 인가 Authorization
 (내 계정으로'만' 할 수 있는 활동시도 , 웹사이트가 내가 로그인 되어 있음을 알고 허가)
 
-세션 ->
+세션 -> 사용자가 로그인에 성공하면 ,서버는 '세션표딱지'를 출력, 이걸 반쪽으로 찢어서 서버가 반쪽갖고 반쪽은 클라이언트(브라우저)에게 전달해준다.
