--- a/Security/10. springboot_security_jwt_session.md
+++ b/Security/10. springboot_security_jwt_session.md
@@ -12,3 +12,7 @@
 브라우저는 이 표를 sessionID라는 이름의 쿠키로 저장한다.
 웹사이에 요청을 보낼떄마다 이 반 표딱지를 실어서 보낸다. 서버는 이 표딱지 중 맞는걸 찾아보고 알맞는게 존재한다면 인가를 허가한다.
 
+하지만 여기서 문제는 메모리위에 표딱지 절반을 두기떄문에 메모리가 날아가면 로그인 유저가 다 사라져버리는 문제가 있다.
+또한 ,DB에 저장하면 요청과정이 번거로워지며 서버에 부담으로 작용한다.
+
+이러한 문제를 해결하기 위해 생겨난것이 'JWT'이다.
