--- a/Security/10. springboot_security_jwt_session.md
+++ b/Security/10. springboot_security_jwt_session.md
@@ -8,6 +8,7 @@
 - 인가 Authorization
 (내 계정으로'만' 할 수 있는 활동시도 , 웹사이트가 내가 로그인 되어 있음을 알고 허가)
 
+### Session
 세션 -> 사용자가 로그인에 성공하면 ,서버는 '세션표딱지'를 출력, 이걸 반쪽으로 찢어서 서버가 반쪽갖고 반쪽은 클라이언트(브라우저)에게 전달해준다.
 브라우저는 이 표를 sessionID라는 이름의 쿠키로 저장한다.
 웹사이에 요청을 보낼떄마다 이 반 표딱지를 실어서 보낸다. 서버는 이 표딱지 중 맞는걸 찾아보고 알맞는게 존재한다면 인가를 허가한다.
