--- a/Security/10. springboot_security_jwt_session.md
+++ b/Security/10. springboot_security_jwt_session.md
@@ -17,3 +17,9 @@
 또한 ,DB에 저장하면 요청과정이 번거로워지며 서버에 부담으로 작용한다.
 
 이러한 문제를 해결하기 위해 생겨난것이 'JWT'이다.
+
+### JWT (Json Web Token)
+
+JWT도 로그인을 하면 Token이라는 표를 출력에서 브라우저에 전달한다.
+이번엔 표를 찢어서 주는것이 아닌 표하나를 그냥준다.( 서버가 기억하지 않고 있다는 말과 동일)
+
