--- a/Security/10. springboot_security_jwt_session.md
+++ b/Security/10. springboot_security_jwt_session.md
@@ -23,3 +23,10 @@
 JWT도 로그인을 하면 Token이라는 표를 출력에서 브라우저에 전달한다.
 이번엔 표를 찢어서 주는것이 아닌 표하나를 그냥준다.( 서버가 기억하지 않고 있다는 말과 동일)
 
+토큰으로 xxxx,yyyy,zzzz이렇게 3부분을 나뉘어져 Token으로 전달한다.
+마침표로 3부분 나누어져 있는것은
+1. 헤더
+2. 페이로드 
+3. 서명 
+
+2. 페이로드 : 누가 누구에게  
