--- a/Jpa/08. jpa_mapping.md
+++ b/Jpa/08. jpa_mapping.md
@@ -1,3 +1,3 @@
 ## fetch 와 Eager
 
-> 뜻 : 예시를 들면, 너가 board table에 select를 하면 
+> 뜻 : 예시를 들면, 너가 board table에 select를 하면 user table정보를 가져올게 왜 한번밖에 없으니까, 바로 join해서 가져옴
