--- a/SpringBoot/05. springboot_exception.md
+++ b/SpringBoot/05. springboot_exception.md
@@ -5,4 +5,9 @@
 컴파일 오류는 우리가 잡기가 쉽지만, 런타임 오류는 잡기가 까다롭습니다. 
 자바에서는 런타임 오류를 두 종류로 보고 있습니다. 바로 에러(Error)와 예외(Exception)으로 이 두가지로 런타임 오류를 보고있다. 
 
+
+프로그래머가 예측하여 이러한 에러를 대비해 처리해주어야한다.
+
+그리고 그런 예외가 발생했을때 어떤 동작을 처리해야하는지를 예외 처리라고 한다.
+
 ### orElseThrow() 메소드 : 저장된 값이 존재하면 그 값을 반환하고, 값이 존재하지 않으면 인수로 전달된 예외를 발생시킴.
