--- a/SpringBoot/05. springboot_exception.md
+++ b/SpringBoot/05. springboot_exception.md
@@ -1,7 +1,20 @@
 ## 예외처리 : 
 예외(Exception)
 프로그램을 실행하다가 보면 어떤 원인때문에 비정상적인 동작을 일으키며 프로그램이 종료이다, 이때 우리는 프로그램이 오류가 발생했다고 한다. 
-에러의 종류는 우리가 컴파일할때 발생할 수 있는 컴파일 오류와 실행 중 발생되는 런타임 오류 두 종류가 있다 
+에러의 종류는 우리가 컴파일할때 발생할 수 있는 컴파일 오류와 실행 중 발생되는 런타임 두 종류가 있다 
+
+예외(Exception)의 종류(일반예외, 실행예외)
+Exception에는 크게 2가지 종류!
+
+컴파일 시점에 발생하는 예외를 Exception(일반예외) 라고 하고,
+
+프로그램 실행시에 발생하는 예외를 RuntimeException(실행예외) 라고 합니다.
+
+즉, 예외가 발생하는 시점에 프로그램이 실행 전 후 상태에 따라 이를 구분하면 됩니다.
+
+ 
+
+아무튼 이 2가지 종류의 Exception 을 처리하기 위해 자바에서는 java.lang.Exception 이라는 최상위 부모 클래스를 제공합니다. 따라서 모든 Exception 들의 조상은 결국  java.lang.Exception 입니다. 아래 그림을 보겠습니다.
 컴파일 오류는 우리가 잡기가 쉽지만, 런타임 오류는 잡기가 까다롭습니다. 
 자바에서는 런타임 오류를 두 종류로 보고 있습니다. 바로 에러(Error)와 예외(Exception)으로 이 두가지로 런타임 오류를 보고있다. 
 
