--- a/SpringBoot/05. springboot_exception.md
+++ b/SpringBoot/05. springboot_exception.md
@@ -7,10 +7,9 @@
 Exception에는 크게 2가지 종류!
 
 컴파일 시점에 발생하는 예외를 Exception(일반예외) 라고 하고,
+프로그램 실행시에 발생하는 예외를 RuntimeException(실행예외) 라고 한다.
 
-프로그램 실행시에 발생하는 예외를 RuntimeException(실행예외) 라고 합니다.
-
-즉, 예외가 발생하는 시점에 프로그램이 실행 전 후 상태에 따라 이를 구분하면 됩니다.
+즉, 예외가 발생하는 시점에 프로그램이 실행 전 후 상태에 따라 이를 구분하면 된다.
 
  
 
